Main section styled

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/emojione-v1_books.svg">
     <title>Bookhub</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
     
         
         <div class="search-bar-section">
-            <input type="text" placeholder="Find your favorite book">
+            <input type="text" placeholder="Find your favorite book!">
             <img src="assets/Group.svg" alt="">
         </div>
 
@@ -34,8 +35,8 @@
 
     <div class="main">
         <div class="main-left-section">
-            <h1 class="slogan">Study anytime, everywhere By Bookhub</h1>
-            <p class="paragraph">We offer a wide selection of new and used books, including bestsellers, classic literature, and rare and collectible titles.</p>
+            <h1 class="slogan">Study anytime, everywhere<br>By <span id="slogan-highlight">Bookhub</span></h1>
+            <p class="paragraph">We offer a wide selection of new and used<br>books, including bestsellers, classic literature,<br>and rare and collectible titles.</p>
 
             <div class="main-button-section">
                 <button class="enrollBtn">Enroll Now</button>
