Styled cards section. Changed main font. Main section positioning fixed. Header search bar icon fixed

--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
     </div>
 
     <div class="cards-section">
-        <h1 class="cards-title">Why Bookhub?</h1>
+        <h1 class="cards-title">Why Bookhub ?</h1>
 
         <div class="cards">
             <div class="card">
                 <img src="assets/clarity_devices-line.svg">
-                <p>Online reading from everywhere</p>
+                <p>Online reading from<br>everywhere</p>
             </div>
             <div class="card">
                 <img src="assets/fluent-emoji-flat_graduation-cap.svg">
-                <p>Students centered Bookhubs</p>
+                <p>Students centered<br>Bookhubs</p>
             </div>
             <div class="card">
                 <img src="assets/material-symbols_headphones.svg" >
-                <p>Listen to favorite books</p>
+                <p>Listen to favorite<br>books</p>
             </div>
         </div>
     </div>
